--- a/scoreCard.html
+++ b/scoreCard.html
@@ -33,13 +33,17 @@
 		bowler[0].children[2].innerHTML = overs + '.' + balls;
 		bowler[0].children[3].innerHTML = parseInt(bowler[0].children[3].innerHTML) + runs;
 		bowler[0].children[6].innerHTML = ((((parseInt(bowler[0].children[3].innerHTML))/((overs * 6) + balls) ))* 6).toFixed(2);
-		
+		var cStriker = striker[0];
+		var cRunner = runner[0];
 		
 		//code to change batsman strike
-		if(runs%2!=0 || )
-		striker[0].className = striker[0].className.replace( /(?:^|\s)striker(?!\S)/g , 'runner' );
-		runner[1].className = runner[1].className.replace( /(?:^|\s)runner(?!\S)/g , 'striker' );
+		if((runs%2 != 0 || balls == 0) && (!(runs%2 != 0 && balls == 0))) {
 		
+																	/*striker[0].className = striker[0].className.replace( /(?:^|\s)striker(?!\S)/g , 'runner' );
+																	runner[1].className = runner[1].className.replace( /(?:^|\s)runner(?!\S)/g , 'striker' );*/
+																	cStriker.className = "runner";
+																	cRunner.className = "striker";
+		}
 		
 		
 		curBall.selectedIndex = "";
